Add new endpoint cached by cloudfare
